2015-09-03  Lucas Forschler  <lforschler@apple.com>

        Test commit.

2015-09-02  Tim Horton  <timothy_horton@apple.com>

        Add a modern API way to know that the navigation gesture snapshot was removed, for WebKitTestRunner
        https://bugs.webkit.org/show_bug.cgi?id=148693

        Reviewed by Anders Carlsson.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::createOtherPage):
        (WTR::TestController::createWebViewWithOptions):

2015-09-02  Carlos Garcia Campos  <cgarcia@igalia.com>

        REGRESSION(r188548): Some tests crash after r188548 because injected bundle messages are received after the test finishes
        https://bugs.webkit.org/show_bug.cgi?id=148529

        Reviewed by Darin Adler.

        When there are pending EventSender messages after a test finishes,
        they could be processed in the main loop started by the
        resetStateToConsistentValues(), but the old EventSender has been
        replaced by a new one at that point. The new Eventsender can crash
        when processing messages that were sent to the old one. To avoid
        this, we return early when receiving an EventSender message and
        the TestController state is not RunningTest.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::didReceiveKeyDownMessageFromInjectedBundle):
        (WTR::TestController::didReceiveMessageFromInjectedBundle):

2015-09-02  Carlos Garcia Campos  <cgarcia@igalia.com>

        REGRESSION(r188548): TestController state is Resseting while tests are running after r188548
        https://bugs.webkit.org/show_bug.cgi?id=148528

        Reviewed by Darin Adler.

        Before r188548 resetStateToConsistentValues() was called in
        TestController::run(), before tests are run, but now it's called
        for every test in TestInvocation::invoke(), after m_status has
        changed to RunningTest.

        * WebKitTestRunner/TestController.cpp: